--- a/database_framingham-final.ipynb
+++ b/database_framingham-final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "2989a3b9",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "28cca2f8",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "e33a9036",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "eb0ac16b",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "67aa05a2",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "71e8ef98",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "3b4cfbf8",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "[5 rows x 62 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "955d82b1",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "4  35.941286466480605  51.543829732533034  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "89f58066",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
        "4  35.941286466480605  51.543829732533034     0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "e34556fb",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
        "4  35.941286466480605  51.543829732533034     0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "d5cec932",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1108,7 @@
        "4      104    194.0  35.941286466480605  51.543829732533034     0  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "1a1d4c8f",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "311d547d",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1312,7 @@
        "4       85.0     85.0           0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "c1334c64",
    "metadata": {},
    "outputs": [],
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "39c43973",
    "metadata": {},
    "outputs": [
@@ -1519,7 +1519,7 @@
        "4       85.0     85.0           0  42.27862022222429  -71.41820304365233  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "fedec21e",
    "metadata": {},
    "outputs": [
@@ -1684,7 +1684,7 @@
        "4  -71.41820304365233  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "5a092f0d",
    "metadata": {},
    "outputs": [],
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "6775dcd1",
    "metadata": {},
    "outputs": [
@@ -1993,7 +1993,7 @@
        "[4543 rows x 14 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "802e14cf",
    "metadata": {},
    "outputs": [],
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "id": "e1784092",
    "metadata": {},
    "outputs": [],
@@ -2025,7 +2025,8 @@
     "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/CAD\"\n",
     "engine = create_engine(db_string)\n",
     "ml_df.to_sql(name='ml', con=engine, if_exists='replace')\n",
-    "    "
+    "framingham_df.to_sql(name='cl_framingham', con=engine, if_exists='replace')\n",
+    "cleaned_extention_df.to_sql(name='cl_extention', con=engine, if_exists='replace')"
    ]
   },
   {
