--- a/Final Project Logistic Regression.ipynb
+++ b/Final Project Logistic Regression.ipynb
@@ -9,8 +9,9 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "import numpy as np \n",
+    "from collections import Counter\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -531,52 +532,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dropping NaN\n",
-    "\n",
-    "CHD_df = CHD_df.dropna()"
+    "model = LogisticRegression()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "male               0\n",
-       "age                0\n",
-       "education          0\n",
-       "currentSmoker      0\n",
-       "cigsPerDay         0\n",
-       "BPMeds             0\n",
-       "prevalentStroke    0\n",
-       "prevalentHyp       0\n",
-       "diabetes           0\n",
-       "totChol            0\n",
-       "sysBP              0\n",
-       "diaBP              0\n",
-       "BMI                0\n",
-       "heartRate          0\n",
-       "glucose            0\n",
-       "TenYearCHD         0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Rechecking for NaN\n",
-    "\n",
-    "CHD_df.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,19 +548,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({0: 2325, 1: 418})"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Split data into training and testing data\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,\n",
-    "    y, random_state=1, stratify=y)\n"
+    "    y, random_state=15, stratify=y)\n",
+    "Counter(y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -623,13 +596,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating a logistic regression model\n",
+    "\n",
+    "classifier = LogisticRegression(solver='lbfgs',\n",
+    "   max_iter=100,\n",
+    "   random_state=1)\n",
+    "classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=200, random_state=1)"
+       "LogisticRegression(C=0.1, multi_class='warn', penalty='12', random_state=1)"
       ]
      },
      "execution_count": 11,
@@ -638,39 +636,14 @@
     }
    ],
    "source": [
-    "# Creating a logistic regression model\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "classifier = LogisticRegression(solver='lbfgs',\n",
-    "   max_iter=200,\n",
-    "   random_state=1)\n",
-    "classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(multi_class='warn', penalty='12', random_state=1)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+    "LogisticRegression(C=0.1, class_weight=None, dual=False, fit_intercept=True,\n",
     "   intercept_scaling=1, max_iter=100, multi_class='warn', penalty='12',\n",
     "   random_state=1, solver='lbfgs', tol=0.0001, warm_start=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,16 +659,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=200, random_state=1)"
+       "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -737,27 +710,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1545</th>\n",
+       "      <th>2464</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2063</th>\n",
+       "      <th>2421</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2286</th>\n",
+       "      <th>3010</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3061</th>\n",
+       "      <th>2987</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1456</th>\n",
+       "      <th>2408</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -767,27 +740,27 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3341</th>\n",
+       "      <th>3148</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>477</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>429</th>\n",
+       "      <th>3561</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3598</th>\n",
+       "      <th>3155</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1805</th>\n",
+       "      <th>2940</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1725</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -798,22 +771,22 @@
       ],
       "text/plain": [
        "      Prediction  Actual\n",
-       "1545           0       0\n",
-       "2063           0       0\n",
-       "2286           0       0\n",
-       "3061           0       1\n",
-       "1456           0       0\n",
+       "2464           0       0\n",
+       "2421           0       0\n",
+       "3010           0       0\n",
+       "2987           0       0\n",
+       "2408           0       0\n",
        "...          ...     ...\n",
-       "3341           0       0\n",
-       "477            0       1\n",
-       "429            0       0\n",
-       "3598           0       0\n",
-       "1805           0       0\n",
+       "3148           0       0\n",
+       "3561           0       0\n",
+       "3155           0       0\n",
+       "2940           0       0\n",
+       "1725           0       0\n",
        "\n",
        "[915 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -869,43 +842,73 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>768</td>\n",
-       "      <td>130</td>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>766</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>128</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     0    1\n",
-       "0  768  130\n",
-       "1    8    9"
+       "          Predicted 0  Predicted 1\n",
+       "Actual 0          766           10\n",
+       "Actual 1          128           11"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Print confusion matrix \n",
+    "# Calculating the confusion matrix.\n",
+    "cm = confusion_matrix(y_test, predictions)\n",
     "\n",
-    "matrix = confusion_matrix(y_test, predictions)\n",
-    "df_matrix = pd.DataFrame(matrix).transpose()\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
     "\n",
-    "df_matrix"
+    "cm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.99      0.92       776\n",
+      "           1       0.52      0.08      0.14       139\n",
+      "\n",
+      "    accuracy                           0.85       915\n",
+      "   macro avg       0.69      0.53      0.53       915\n",
+      "weighted avg       0.81      0.85      0.80       915\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classification report as a DataFrame\n",
+    "\n",
+    "report = classification_report(y_test, predictions)\n",
+    "print(report)"
    ]
   },
   {
@@ -914,45 +917,44 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'metrics' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-5afe3b1a54b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Classification report as a DataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mreport\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassification_report\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mdf_classification_report\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdf_classification_report\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_classification_report\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'f1-score'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'metrics' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature: 0, Score: 0.37958\n",
+      "Feature: 1, Score: 0.55861\n",
+      "Feature: 2, Score: -0.03351\n",
+      "Feature: 3, Score: -0.05738\n",
+      "Feature: 4, Score: 0.19378\n",
+      "Feature: 5, Score: 0.02228\n",
+      "Feature: 6, Score: 0.04043\n",
+      "Feature: 7, Score: 0.15307\n",
+      "Feature: 8, Score: 0.02459\n",
+      "Feature: 9, Score: 0.18307\n",
+      "Feature: 10, Score: 0.38245\n",
+      "Feature: 11, Score: -0.14484\n",
+      "Feature: 12, Score: -0.02506\n",
+      "Feature: 13, Score: -0.06609\n",
+      "Feature: 14, Score: 0.16721\n"
      ]
     }
    ],
    "source": [
-    "# Classification report as a DataFrame\n",
+    "# Get feature importance\n",
+    "importance = classifier.coef_[0]\n",
     "\n",
-    "report = metrics.classification_report(y_test, predictions, output_dict=True)\n",
-    "df_classification_report = pd.DataFrame(report).transpose()\n",
-    "df_classification_report = df_classification_report.sort_values(by=['f1-score'], ascending=False)\n",
-    "df_classification_report"
+    "# Summarize feature importance\n",
+    "for i,v in enumerate(importance):\n",
+    "\tprint('Feature: %0d, Score: %.5f' % (i,v))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Correlation with output variable\n",
-    "cor_target = abs(cor[\"MEDV\"])\n",
-    "#Selecting highly correlated features\n",
-    "relevant_features = cor_target[cor_target>0.5]\n",
-    "relevant_features"
+    "# Features with lowest coef are: Feature 8 (diabetes), Feature 13 (heartRate)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
