--- a/Final Project Random Forrest Model.ipynb
+++ b/Final Project Random Forrest Model.ipynb
@@ -296,36 +296,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Using a Random Forrest Model "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the features set.\n",
-    "#X = df_loans.copy()\n",
-    "#X = X.drop(\"bad\", axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the target set.\n",
-    "#y = df_loans[\"bad\"].ravel()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -435,144 +405,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'cleveland_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-b873495dd09c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Accuracy and confusion matrix for reduced features dataframe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Split data into features and outcome\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcleveland_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"healthy_new\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcleveland_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"healthy_new\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'cleveland_df' is not defined"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted 0</th>\n",
+       "      <th>Predicted 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual 0</th>\n",
+       "      <td>779</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual 1</th>\n",
+       "      <td>123</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Predicted 0  Predicted 1\n",
+       "Actual 0          779            7\n",
+       "Actual 1          123            6"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculating the confusion matrix.\n",
+    "cm = confusion_matrix(y_test, predictions)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual 0\", \"Actual 1\"], columns=[\"Predicted 0\", \"Predicted 1\"])\n",
+    "\n",
+    "cm_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.99      0.92       786\n",
+      "           1       0.46      0.05      0.08       129\n",
+      "\n",
+      "    accuracy                           0.86       915\n",
+      "   macro avg       0.66      0.52      0.50       915\n",
+      "weighted avg       0.81      0.86      0.80       915\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Accuracy and confusion matrix for reduced features dataframe\n",
-    "# Split data into features and outcome\n",
-    "y = cleveland_df[\"healthy_new\"]\n",
-    "X = cleveland_df.drop(columns=\"healthy_new\")"
+    "# Classification report\n",
+    "print(\"Classification Report\")\n",
+    "print(classification_report(y_test, predictions))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating a StandardScaler instance.\n",
-    "scaler = StandardScaler()\n",
-    "# Fitting the Standard Scaler with the training data.\n",
-    "X_scaler = scaler.fit(X_train)\n",
-    "\n",
-    "# Scaling the data.\n",
-    "X_train_scaled = X_scaler.transform(X_train)\n",
-    "X_test_scaled = X_scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Determine the shape of our training and testing sets.\n",
-    "print(X_train.shape)\n",
-    "print(X_test.shape)\n",
-    "print(y_train.shape)\n",
-    "print(y_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating a StandardScaler instance.\n",
-    "scaler = StandardScaler()\n",
-    "# Fitting the Standard Scaler with the training data.\n",
-    "X_scaler = scaler.fit(X_train)\n",
-    "\n",
-    "# Scaling the data.\n",
-    "X_train_scaled = X_scaler.transform(X_train)\n",
-    "X_test_scaled = X_scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Verifying that standard scaler standardized the data, mean should be close to 0 and std should be close to 1\n",
-    "\n",
-    "import numpy as np\n",
-    "print(np.mean(loans_data_scaled[:,0]))\n",
-    "print(np.std(loans_data_scaled[:,0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Evaluate the model's performance \n",
-    "from sklearn.metrics import accuracy_score\n",
-    "print(accuracy_score(y_test, predictions))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print confusion matrix - NEED TO FIX, TRY AS A DATAFRAME\n",
-    "#matrix = confusion_matrix(y_test, predictions)\n",
-    "#print(matrix)\n",
-    "\n",
-    "matrix = confusion_matrix(y_test, predictions)\n",
-    "print(matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Classification report as a DataFrame\n",
-    "\n",
-    "report = metrics.classification_report(y_test, y_pred, output_dict=True)\n",
-    "df_classification_report = pd.DataFrame(report).transpose()\n",
-    "df_classification_report = df_classification_report.sort_values(by=['f1-score'], ascending=False)\n",
-    "return df_classification_report"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Correlation with output variable\n",
-    "cor_target = abs(cor[\"MEDV\"])\n",
-    "#Selecting highly correlated features\n",
-    "relevant_features = cor_target[cor_target>0.5]\n",
-    "relevant_features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
