--- a/Final Project Random Forrest Model.ipynb
+++ b/Final Project Random Forrest Model.ipynb
@@ -59,103 +59,103 @@
        "      <th>BMI</th>\n",
        "      <th>heartRate</th>\n",
        "      <th>glucose</th>\n",
-       "      <th>TenYearCHD</th>\n",
+       "      <th>CHD</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>39</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>15</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>195.0</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>26.97</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>77.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>243</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>22.02</td>\n",
+       "      <td>78</td>\n",
+       "      <td>63</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>46</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>121.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>28.73</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>76.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>317</td>\n",
+       "      <td>182.5</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>20.52</td>\n",
+       "      <td>75</td>\n",
+       "      <td>79</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
        "      <td>1</td>\n",
-       "      <td>48</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>20</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>245.0</td>\n",
-       "      <td>127.5</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>25.34</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>70.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>245</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>23.80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>73</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>61</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>225.0</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>28.58</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>460</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>25.21</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>46</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>285.0</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>23.10</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>85.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>220</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>87.5</td>\n",
+       "      <td>22.01</td>\n",
+       "      <td>80</td>\n",
+       "      <td>86</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -164,25 +164,25 @@
       ],
       "text/plain": [
        "   male  age  education  currentSmoker  cigsPerDay  BPMeds  prevalentStroke  \\\n",
-       "0     1   39        4.0              0         0.0     0.0                0   \n",
-       "1     0   46        2.0              0         0.0     0.0                0   \n",
-       "2     1   48        1.0              1        20.0     0.0                0   \n",
-       "3     0   61        3.0              1        30.0     0.0                0   \n",
-       "4     0   46        3.0              1        23.0     0.0                0   \n",
+       "0     0   42          4              1          15       0                0   \n",
+       "1     0   64          1              1           8       0                0   \n",
+       "2     0   46          1              1          20       0                0   \n",
+       "3     0   60          2              1           2       0                0   \n",
+       "4     1   51          1              0           0       0                0   \n",
        "\n",
        "   prevalentHyp  diabetes  totChol  sysBP  diaBP    BMI  heartRate  glucose  \\\n",
-       "0             0         0    195.0  106.0   70.0  26.97       80.0     77.0   \n",
-       "1             0         0    250.0  121.0   81.0  28.73       95.0     76.0   \n",
-       "2             0         0    245.0  127.5   80.0  25.34       75.0     70.0   \n",
-       "3             1         0    225.0  150.0   95.0  28.58       65.0    103.0   \n",
-       "4             0         0    285.0  130.0   84.0  23.10       85.0     85.0   \n",
+       "0             0         0      243  126.0   85.0  22.02         78       63   \n",
+       "1             1         0      317  182.5   88.0  20.52         75       79   \n",
+       "2             0         0      245   97.0   65.0  23.80         60       73   \n",
+       "3             1         0      460  131.0   96.0  25.21         75       80   \n",
+       "4             1         0      220  151.0   87.5  22.01         80       86   \n",
        "\n",
-       "   TenYearCHD  \n",
-       "0           0  \n",
-       "1           0  \n",
-       "2           0  \n",
-       "3           1  \n",
-       "4           0  "
+       "   CHD  \n",
+       "0    0  \n",
+       "1    0  \n",
+       "2    0  \n",
+       "3    0  \n",
+       "4    0  "
       ]
      },
      "execution_count": 2,
@@ -193,7 +193,7 @@
    "source": [
     "# Read in the data from GitHub\n",
     "\n",
-    "url = 'https://raw.githubusercontent.com/ccorboy/project_one/database/cleaned_framingham_ml.csv'\n",
+    "url = 'https://raw.githubusercontent.com/ccorboy/project_one/database/CVS_files/final_ml.csv'\n",
     "CHD_df = pd.read_csv(url)\n",
     "CHD_df.head()\n"
    ]
@@ -208,20 +208,20 @@
       "text/plain": [
        "male                 int64\n",
        "age                  int64\n",
-       "education          float64\n",
+       "education            int64\n",
        "currentSmoker        int64\n",
-       "cigsPerDay         float64\n",
-       "BPMeds             float64\n",
+       "cigsPerDay           int64\n",
+       "BPMeds               int64\n",
        "prevalentStroke      int64\n",
        "prevalentHyp         int64\n",
        "diabetes             int64\n",
-       "totChol            float64\n",
+       "totChol              int64\n",
        "sysBP              float64\n",
        "diaBP              float64\n",
        "BMI                float64\n",
-       "heartRate          float64\n",
-       "glucose            float64\n",
-       "TenYearCHD           int64\n",
+       "heartRate            int64\n",
+       "glucose              int64\n",
+       "CHD                  int64\n",
        "dtype: object"
       ]
      },
@@ -245,20 +245,20 @@
       "text/plain": [
        "male                 int64\n",
        "age                  int64\n",
-       "education          float64\n",
+       "education            int64\n",
        "currentSmoker        int64\n",
-       "cigsPerDay         float64\n",
-       "BPMeds             float64\n",
+       "cigsPerDay           int64\n",
+       "BPMeds               int64\n",
        "prevalentStroke      int64\n",
        "prevalentHyp         int64\n",
        "diabetes             int64\n",
-       "totChol            float64\n",
+       "totChol              int64\n",
        "sysBP              float64\n",
        "diaBP              float64\n",
        "BMI                float64\n",
-       "heartRate          float64\n",
-       "glucose            float64\n",
-       "TenYearCHD           int64\n",
+       "heartRate            int64\n",
+       "glucose              int64\n",
+       "CHD                  int64\n",
        "dtype: object"
       ]
      },
@@ -278,8 +278,8 @@
    "outputs": [],
    "source": [
     "# Split data into features and outcome\n",
-    "y = CHD_df[\"TenYearCHD\"]\n",
-    "X = CHD_df.drop(columns=\"TenYearCHD\")"
+    "y = CHD_df[\"CHD\"]\n",
+    "X = CHD_df.drop(columns=\"CHD\")"
    ]
   },
   {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,14 +352,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8579234972677595\n"
+      "0.860614724803431\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,18 +381,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.0215202 , 0.12656387, 0.03593464, 0.01333227, 0.05011823,\n",
-       "       0.00645248, 0.00386689, 0.01796452, 0.00686528, 0.11766824,\n",
-       "       0.13669197, 0.11996716, 0.12745438, 0.09440301, 0.12119686])"
+       "array([0.01838164, 0.11196585, 0.03661135, 0.01366465, 0.0434605 ,\n",
+       "       0.01133826, 0.00577341, 0.01496135, 0.0138665 , 0.12869539,\n",
+       "       0.13040559, 0.11570277, 0.13695955, 0.10245052, 0.11576268])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -436,13 +436,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Actual 0</th>\n",
-       "      <td>779</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2408</td>\n",
+       "      <td>120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Actual 1</th>\n",
-       "      <td>123</td>\n",
-       "      <td>6</td>\n",
+       "      <td>270</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -450,11 +450,11 @@
       ],
       "text/plain": [
        "          Predicted 0  Predicted 1\n",
-       "Actual 0          779            7\n",
-       "Actual 1          123            6"
+       "Actual 0         2408          120\n",
+       "Actual 1          270            0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -482,12 +482,12 @@
       "Classification Report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.86      0.99      0.92       786\n",
-      "           1       0.46      0.05      0.08       129\n",
+      "           0       0.90      0.95      0.93      2528\n",
+      "           1       0.00      0.00      0.00       270\n",
       "\n",
-      "    accuracy                           0.86       915\n",
-      "   macro avg       0.66      0.52      0.50       915\n",
-      "weighted avg       0.81      0.86      0.80       915\n",
+      "    accuracy                           0.86      2798\n",
+      "   macro avg       0.45      0.48      0.46      2798\n",
+      "weighted avg       0.81      0.86      0.84      2798\n",
       "\n"
      ]
     }
