--- a/Final Project Random Forrest Model.ipynb
+++ b/Final Project Random Forrest Model.ipynb
@@ -15,7 +15,11 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report"
+    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "import psycopg2\n",
+    "from config import db_password"
    ]
   },
   {
@@ -67,95 +71,95 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>42</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>15</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>243</td>\n",
+       "      <td>243.0</td>\n",
        "      <td>126.0</td>\n",
        "      <td>85.0</td>\n",
        "      <td>22.02</td>\n",
-       "      <td>78</td>\n",
-       "      <td>63</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>63.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>64</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>317</td>\n",
+       "      <td>317.0</td>\n",
        "      <td>182.5</td>\n",
        "      <td>88.0</td>\n",
        "      <td>20.52</td>\n",
-       "      <td>75</td>\n",
-       "      <td>79</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>79.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>46</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>245</td>\n",
+       "      <td>245.0</td>\n",
        "      <td>97.0</td>\n",
        "      <td>65.0</td>\n",
        "      <td>23.80</td>\n",
-       "      <td>60</td>\n",
-       "      <td>73</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>73.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>60</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>460</td>\n",
+       "      <td>460.0</td>\n",
        "      <td>131.0</td>\n",
        "      <td>96.0</td>\n",
        "      <td>25.21</td>\n",
-       "      <td>75</td>\n",
-       "      <td>80</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>80.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>51</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>220</td>\n",
+       "      <td>220.0</td>\n",
        "      <td>151.0</td>\n",
        "      <td>87.5</td>\n",
        "      <td>22.01</td>\n",
-       "      <td>80</td>\n",
-       "      <td>86</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>86.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -164,18 +168,18 @@
       ],
       "text/plain": [
        "   male  age  education  currentSmoker  cigsPerDay  BPMeds  prevalentStroke  \\\n",
-       "0     0   42          4              1          15       0                0   \n",
-       "1     0   64          1              1           8       0                0   \n",
-       "2     0   46          1              1          20       0                0   \n",
-       "3     0   60          2              1           2       0                0   \n",
-       "4     1   51          1              0           0       0                0   \n",
+       "0     0   42        4.0              1        15.0     0.0                0   \n",
+       "1     0   64        1.0              1         8.0     0.0                0   \n",
+       "2     0   46        1.0              1        20.0     0.0                0   \n",
+       "3     0   60        2.0              1         2.0     0.0                0   \n",
+       "4     1   51        1.0              0         0.0     0.0                0   \n",
        "\n",
        "   prevalentHyp  diabetes  totChol  sysBP  diaBP    BMI  heartRate  glucose  \\\n",
-       "0             0         0      243  126.0   85.0  22.02         78       63   \n",
-       "1             1         0      317  182.5   88.0  20.52         75       79   \n",
-       "2             0         0      245   97.0   65.0  23.80         60       73   \n",
-       "3             1         0      460  131.0   96.0  25.21         75       80   \n",
-       "4             1         0      220  151.0   87.5  22.01         80       86   \n",
+       "0             0         0    243.0  126.0   85.0  22.02       78.0     63.0   \n",
+       "1             1         0    317.0  182.5   88.0  20.52       75.0     79.0   \n",
+       "2             0         0    245.0   97.0   65.0  23.80       60.0     73.0   \n",
+       "3             1         0    460.0  131.0   96.0  25.21       75.0     80.0   \n",
+       "4             1         0    220.0  151.0   87.5  22.01       80.0     86.0   \n",
        "\n",
        "   CHD  \n",
        "0    0  \n",
@@ -191,11 +195,11 @@
     }
    ],
    "source": [
-    "# Read in the data from GitHub\n",
-    "\n",
-    "url = 'https://raw.githubusercontent.com/ccorboy/project_one/database/CVS_files/final_ml.csv'\n",
-    "CHD_df = pd.read_csv(url)\n",
-    "CHD_df.head()\n"
+    "#create PostgresSQL connection\n",
+    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/CAD\"\n",
+    "engine = create_engine(db_string)\n",
+    "CHD_df = pd.read_sql('SELECT * FROM final_ml', engine)\n",
+    "CHD_df.head()"
    ]
   },
   {
