--- a/Final Project Logistic Regression Oversampling Reduced Features.ipynb
+++ b/Final Project Logistic Regression Oversampling Reduced Features.ipynb
@@ -17,7 +17,11 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "from sklearn.metrics import balanced_accuracy_score"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "import psycopg2\n",
+    "from config import db_password"
    ]
   },
   {
@@ -69,190 +73,190 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>42</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>15</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>243</td>\n",
+       "      <td>243.0</td>\n",
        "      <td>126.0</td>\n",
        "      <td>85.0</td>\n",
        "      <td>22.02</td>\n",
-       "      <td>78</td>\n",
-       "      <td>63</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>63.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>64</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>317</td>\n",
+       "      <td>317.0</td>\n",
        "      <td>182.5</td>\n",
        "      <td>88.0</td>\n",
        "      <td>20.52</td>\n",
-       "      <td>75</td>\n",
-       "      <td>79</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>79.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>46</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>245</td>\n",
+       "      <td>245.0</td>\n",
        "      <td>97.0</td>\n",
        "      <td>65.0</td>\n",
        "      <td>23.80</td>\n",
-       "      <td>60</td>\n",
-       "      <td>73</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>73.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>60</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>460</td>\n",
+       "      <td>460.0</td>\n",
        "      <td>131.0</td>\n",
        "      <td>96.0</td>\n",
        "      <td>25.21</td>\n",
-       "      <td>75</td>\n",
-       "      <td>80</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>80.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>51</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>220</td>\n",
+       "      <td>220.0</td>\n",
        "      <td>151.0</td>\n",
        "      <td>87.5</td>\n",
        "      <td>22.01</td>\n",
-       "      <td>80</td>\n",
-       "      <td>86</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>86.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1</td>\n",
        "      <td>63</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>15</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>207</td>\n",
+       "      <td>207.0</td>\n",
        "      <td>165.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>21.33</td>\n",
-       "      <td>72</td>\n",
-       "      <td>77</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>77.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>1</td>\n",
        "      <td>76</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>241</td>\n",
+       "      <td>241.0</td>\n",
        "      <td>173.0</td>\n",
        "      <td>90.0</td>\n",
        "      <td>30.72</td>\n",
-       "      <td>76</td>\n",
-       "      <td>84</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>84.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>1</td>\n",
        "      <td>73</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>218</td>\n",
+       "      <td>218.0</td>\n",
        "      <td>139.0</td>\n",
        "      <td>72.5</td>\n",
        "      <td>21.49</td>\n",
-       "      <td>70</td>\n",
-       "      <td>106</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>106.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>1</td>\n",
        "      <td>52</td>\n",
-       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>30</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>248</td>\n",
+       "      <td>248.0</td>\n",
        "      <td>119.0</td>\n",
        "      <td>82.0</td>\n",
        "      <td>26.55</td>\n",
-       "      <td>65</td>\n",
-       "      <td>100</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>1</td>\n",
        "      <td>48</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>20</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>200</td>\n",
+       "      <td>200.0</td>\n",
        "      <td>120.0</td>\n",
        "      <td>77.0</td>\n",
        "      <td>22.42</td>\n",
-       "      <td>90</td>\n",
-       "      <td>79</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>79.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -261,28 +265,28 @@
       ],
       "text/plain": [
        "   male  age  education  currentSmoker  cigsPerDay  BPMeds  prevalentStroke  \\\n",
-       "0     0   42          4              1          15       0                0   \n",
-       "1     0   64          1              1           8       0                0   \n",
-       "2     0   46          1              1          20       0                0   \n",
-       "3     0   60          2              1           2       0                0   \n",
-       "4     1   51          1              0           0       0                0   \n",
-       "5     1   63          1              1          15       0                0   \n",
-       "6     1   76          1              0           0       1                1   \n",
-       "7     1   73          1              0           0       0                0   \n",
-       "8     1   52          3              1          30       0                0   \n",
-       "9     1   48          4              1          20       0                0   \n",
+       "0     0   42        4.0              1        15.0     0.0                0   \n",
+       "1     0   64        1.0              1         8.0     0.0                0   \n",
+       "2     0   46        1.0              1        20.0     0.0                0   \n",
+       "3     0   60        2.0              1         2.0     0.0                0   \n",
+       "4     1   51        1.0              0         0.0     0.0                0   \n",
+       "5     1   63        1.0              1        15.0     0.0                0   \n",
+       "6     1   76        1.0              0         0.0     1.0                1   \n",
+       "7     1   73        1.0              0         0.0     0.0                0   \n",
+       "8     1   52        3.0              1        30.0     0.0                0   \n",
+       "9     1   48        4.0              1        20.0     0.0                0   \n",
        "\n",
        "   prevalentHyp  diabetes  totChol  sysBP  diaBP    BMI  heartRate  glucose  \\\n",
-       "0             0         0      243  126.0   85.0  22.02         78       63   \n",
-       "1             1         0      317  182.5   88.0  20.52         75       79   \n",
-       "2             0         0      245   97.0   65.0  23.80         60       73   \n",
-       "3             1         0      460  131.0   96.0  25.21         75       80   \n",
-       "4             1         0      220  151.0   87.5  22.01         80       86   \n",
-       "5             1         0      207  165.0  100.0  21.33         72       77   \n",
-       "6             1         0      241  173.0   90.0  30.72         76       84   \n",
-       "7             1         0      218  139.0   72.5  21.49         70      106   \n",
-       "8             0         0      248  119.0   82.0  26.55         65      100   \n",
-       "9             0         0      200  120.0   77.0  22.42         90       79   \n",
+       "0             0         0    243.0  126.0   85.0  22.02       78.0     63.0   \n",
+       "1             1         0    317.0  182.5   88.0  20.52       75.0     79.0   \n",
+       "2             0         0    245.0   97.0   65.0  23.80       60.0     73.0   \n",
+       "3             1         0    460.0  131.0   96.0  25.21       75.0     80.0   \n",
+       "4             1         0    220.0  151.0   87.5  22.01       80.0     86.0   \n",
+       "5             1         0    207.0  165.0  100.0  21.33       72.0     77.0   \n",
+       "6             1         0    241.0  173.0   90.0  30.72       76.0     84.0   \n",
+       "7             1         0    218.0  139.0   72.5  21.49       70.0    106.0   \n",
+       "8             0         0    248.0  119.0   82.0  26.55       65.0    100.0   \n",
+       "9             0         0    200.0  120.0   77.0  22.42       90.0     79.0   \n",
        "\n",
        "   CHD  \n",
        "0    0  \n",
@@ -303,11 +307,11 @@
     }
    ],
    "source": [
-    "# Read in the data from GitHub\n",
-    "\n",
-    "url = 'https://raw.githubusercontent.com/ccorboy/project_one/database/CVS_files/final_ml.csv'\n",
-    "CHD_df = pd.read_csv(url)\n",
-    "CHD_df.head(10)\n"
+    "#create PostgresSQL connection\n",
+    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/CAD\"\n",
+    "engine = create_engine(db_string)\n",
+    "CHD_df = pd.read_sql('SELECT * FROM final_ml', engine)\n",
+    "CHD_df.head(10)"
    ]
   },
   {
